--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-DEPRECATED see github.com/julbouln/musicboard for updated version
+DEPRECATED see https://github.com/julbouln/musicboard for updated version
 
 STM32F746g Discovery board SF2 polyphonic MIDI synthesizer
 
